// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. video with data attributes 1`] = `
<div
  data-is-360={false}
  data-testid="video-component"
>
  <div>
    <video
      data-account="[account id]"
      data-application-id={true}
      data-embed="default"
      data-player="default"
      data-video-id="[video id]"
      poster="ad893a546e726c9a0da65d0ae1add0a1"
    />
  </div>
</div>
`;

exports[`2. 360 video with data attributes 1`] = `
<div
  data-is-360={true}
  data-testid="video-component"
>
  <div>
    <div>
      <IconVideo360Player
        fillColour="#FFFFFF"
        height={100}
      />
    </div>
    <video
      data-account="[account id]"
      data-application-id={true}
      data-embed="default"
      data-player="default"
      data-video-id="[video id]"
      poster="ad893a546e726c9a0da65d0ae1add0a1"
    />
  </div>
</div>
`;
